--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1 class="header__title">XIFIED</h1>
                 <p class="header__text">Welcome to the future of apps</p>
                 <div class="header__iphone-x">
-                    <img src="img/iphone-x.svg" alt="Iphone x image">
+                    <img src="img/fullphone-x.svg" alt="Iphone x image">
                 </div>
             </div>
         </div>
