Re-Designed The Header

--- a/index.html
+++ b/index.html
@@ -17,8 +17,38 @@
             <div class="header__box">
                 <h1 class="header__title">XIFIED</h1>
                 <p class="header__text">Welcome to the future of apps</p>
-                <div class="header__iphone-x">
-                    <img src="img/fullphone-x.svg" alt="Iphone x image">
+                <img src="img/fullphone-x.svg" alt="Iphone x image">
+            </div>
+            <div class="header__testimonial">
+                <div class="quote">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24"><path d="M13 14.725c0-5.141 3.892-10.519 10-11.725l.984 2.126c-2.215.835-4.163 3.742-4.38 5.746 2.491.392 4.396 2.547 4.396 5.149 0 3.182-2.584 4.979-5.199 4.979-3.015 0-5.801-2.305-5.801-6.275zm-13 0c0-5.141 3.892-10.519 10-11.725l.984 2.126c-2.215.835-4.163 3.742-4.38 5.746 2.491.392 4.396 2.547 4.396 5.149 0 3.182-2.584 4.979-5.199 4.979-3.015 0-5.801-2.305-5.801-6.275z"/></svg>
+                </div>
+                <div class="quote__text">Some fancy-ass quote about <br> this super app</div>
+                <div class="quote__by">The Own Magzine</div>
+                <div class="shape">
+                    <div class="shape__polygon">
+                        <svg width="85" height="98" viewBox="0 0 85 98" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M42.5876 97.037L0.509499 72.7778L0.509499 24.2593L42.5876 7.62939e-06L84.6656 24.2593L84.6656 72.7778L42.5876 97.037Z"
+                                fill="#290628" />
+                        </svg>
+                    </div>
+                    <div class="shape__ellipse">
+                        <svg width="99" height="98" viewBox="0 0 99 98" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <ellipse cx="49.5254" cy="48.5185" rx="48.5876" ry="48.5185" fill="#3B0086" />
+                        </svg>
+
+                    </div>
+                    <div class="shape__square">
+                        <svg width="99" height="98" viewBox="0 0 99 98" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="0.875732" width="97.1751" height="97.037" fill="#6200B3" />
+                        </svg>
+
+                    </div>
+                    <div class="shape__triangle">
+                        <svg width="115" height="99" viewBox="0 0 115 99" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M57.4068 0L114.212 98.25H0.601423L57.4068 0Z" fill="#ED1C24" />
+                        </svg>
+                    </div>
                 </div>
             </div>
         </div>
