--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
             </div>
         </div>
     </div>
+    <div class="app-info">
+        <div class="wrapper">
+            <div class="app-info__text">
+                <h1>EasE youR difficulT life</h1>
+                <p>This super fun and awesome app makes every problem in your life just fade away and it also makes you super rich, famous and beautiful.</p>
+            </div>
+            <div class="app-info__img">
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
