--- a/index.html
+++ b/index.html
@@ -54,13 +54,46 @@
         </div>
     </div>
     <div class="app-info">
-        <div class="wrapper">
-            <div class="app-info__text">
-                <h1>EasE youR difficulT life</h1>
-                <p>This super fun and awesome app makes every problem in your life just fade away and it also makes you super rich, famous and beautiful.</p>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="app-info__text">
+                    <img class="app-info__icons" src="img/s-shapes.svg" alt="">
+                    <h1 class="app-info__title">Ease Your difficult life</h1>
+                    <p class="app-info__detail">
+                        This super fun and awesome app<br>
+                        makes every problem in your life<br>
+                        just fade away and it also makes<br> 
+                        you super rich, famous and<br> 
+                        beautiful.
+                    </p>
+                </div>
             </div>
-            <div class="app-info__img">
-
+            <div class="col-1-of-2">
+                <div class="app-info__img">
+                    <img src="img/iphone-nav.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="app-info app-info--2">
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="app-info__img">
+                    <img src="img/fullphone-x.svg" alt="">
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <div class="app-info__text">
+                    <img class="app-info__icons" src="img/s-shapes.svg" alt="">
+                    <h1 class="app-info__title">BRAG ABOUT APP</h1>
+                    <p class="app-info__detail">
+                        This super fun and awesome app<br>
+                        makes every problem in your life<br>
+                        just fade away and it also makes<br> 
+                        you super rich, famous and<br> 
+                        beautiful.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
