Coded CTA section

--- a/index.html
+++ b/index.html
@@ -60,11 +60,7 @@
                     <img class="app-info__icons" src="img/s-shapes.svg" alt="">
                     <h1 class="app-info__title">Ease Your difficult life</h1>
                     <p class="app-info__detail">
-                        This super fun and awesome app<br>
-                        makes every problem in your life<br>
-                        just fade away and it also makes<br> 
-                        you super rich, famous and<br> 
-                        beautiful.
+                        This super fun and awesome app<br> makes every problem in your life<br> just fade away and it also makes<br> you super rich, famous and<br> beautiful.
                     </p>
                 </div>
             </div>
@@ -79,7 +75,7 @@
         <div class="row">
             <div class="col-1-of-2">
                 <div class="app-info__img">
-                    <img src="img/fullphone-x.svg" alt="">
+                    <img style="margin-left: 20%" src="img/fullphone-x.svg" alt="">
                 </div>
             </div>
             <div class="col-1-of-2">
@@ -87,16 +83,25 @@
                     <img class="app-info__icons" src="img/s-shapes.svg" alt="">
                     <h1 class="app-info__title">BRAG ABOUT APP</h1>
                     <p class="app-info__detail">
-                        This super fun and awesome app<br>
-                        makes every problem in your life<br>
-                        just fade away and it also makes<br> 
-                        you super rich, famous and<br> 
-                        beautiful.
+                        This super fun and awesome app<br> makes every problem in your life<br> just fade away and it also makes<br> you super rich, famous and<br> beautiful.
                     </p>
                 </div>
             </div>
         </div>
     </div>
+    <div class="cta">
+        <div class="cta__box">
+            <h1 class="cta__title">Download</h1>
+            <p class="cta__text">While there hot</p>
+            <div class="cta__icons">
+                <img src="img/iconmonstr-apple-os-1.svg">
+                <img src="img/iconmonstr-google-play-1.svg">
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+
+    </footer>
 </body>
 
 </html>
