--- a/index.html
+++ b/index.html
@@ -100,7 +100,44 @@
         </div>
     </div>
     <footer class="footer">
+        <div class="footer__shape">
+            <div class="footer__shape__polygon">
+                <svg width="85" height="98" viewBox="0 0 85 98" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M42.5876 97.037L0.509499 72.7778L0.509499 24.2593L42.5876 7.62939e-06L84.6656 24.2593L84.6656 72.7778L42.5876 97.037Z"
+                        fill="#290628" />
+                </svg>
+            </div>
+            <div class="footer__shape__ellipse">
+                <svg width="99" height="98" viewBox="0 0 99 98" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <ellipse cx="49.5254" cy="48.5185" rx="48.5876" ry="48.5185" fill="#3B0086" />
+                </svg>
 
+            </div>
+            <div class="footer__shape__square">
+                <svg width="99" height="98" viewBox="0 0 99 98" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="0.875732" width="97.1751" height="97.037" fill="#6200B3" />
+                </svg>
+
+            </div>
+            <div class="footer__shape__triangle">
+                <svg width="115" height="99" viewBox="0 0 115 99" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M57.4068 0L114.212 98.25H0.601423L57.4068 0Z" fill="#ED1C24" />
+                </svg>
+            </div>
+        </div>
+        <div class="footer__logo">
+            <img src="img/logo.svg">
+        </div>
+        <div class="footer__text">
+            <p>Our company serves to all mankind to make the <br> world a better place. Join the movement.</p>
+        </div>
+        <div class="footer__links">
+            <a href="#"><img src="img/iconmonstr-facebook-1.svg"></a>
+            <a href="#"><img src="img/iconmonstr-instagram-1.svg"></a>
+        </div>
+        <div class="footer__copyright">
+            <p>@XIFIED CORPORATION</p>
+        </div>
     </footer>
 </body>
 
